--- a/stima.html
+++ b/stima.html
@@ -1,1 +1,144 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stima Oro - Compro Oro Frascati</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    header, footer {
+      background-color: #111;
+      color: gold;
+      text-align: center;
+      padding: 1rem 0;
+    }
+    nav {
+      background: #222;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      color: gold;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem;
+    }
+    h2 {
+      color: #333;
+      text-align: center;
+    }
+    form {
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    label, input, select {
+      display: block;
+      width: 100%;
+      margin-bottom: 1rem;
+    }
+    input, select {
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      background-color: gold;
+      border: none;
+      padding: 0.75rem 2rem;
+      color: black;
+      font-weight: bold;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .result {
+      margin-top: 1rem;
+      font-weight: bold;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Compro Oro Frascati</h1>
+    <p>Stima il tuo oro in pochi secondi</p>
+  </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="stima.html">Stima Oro</a>
+    <a href="chi-siamo.html">Chi Siamo</a>
+    <a href="come-funziona.html">Come Funziona</a>
+    <a href="faq.html">FAQ</a>
+    <a href="contatti.html">Contatti</a>
+  </nav>
+
+  <div class="container">
+    <h2>Calcola la Stima del Tuo Oro</h2>
+    <form id="stima-form">
+      <label for="carati">Seleziona i carati:</label>
+      <select id="carati" required>
+        <option value="">-- scegli --</option>
+        <option value="24">24K (oro puro)</option>
+        <option value="22">22K</option>
+        <option value="18">18K</option>
+        <option value="14">14K</option>
+      </select>
+
+      <label for="peso">Inserisci il peso in grammi:</label>
+      <input type="number" id="peso" step="0.01" min="0" required>
+
+      <button type="submit">Calcola Stima</button>
+    </form>
+
+    <div class="result" id="risultato"></div>
+  </div>
+
+  <footer>
+    &copy; 2025 Compro Oro Frascati - Tutti i diritti riservati
+  </footer>
+
+  <script>
+    const prezziOro = {
+      24: 60,
+      22: 55,
+      18: 45,
+      14: 35
+    };
+
+    document.getElementById('stima-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const carati = document.getElementById('carati').value;
+      const peso = parseFloat(document.getElementById('peso').value);
+
+      if (carati && peso) {
+        const prezzo = prezziOro[carati];
+        const totale = (prezzo * peso).toFixed(2);
+        document.getElementById('risultato').innerText = `Valore stimato: €${totale}`;
+      } else {
+        document.getElementById('risultato').innerText = 'Inserisci tutti i dati.';
+      }
+    });
+  </script>
+</body>
+</html>
 
