--- a/stima.html
+++ b/stima.html
@@ -1,3 +1,11 @@
+<nav>
+  <a href="index.html">Home</a>
+  <a href="stima.html">Stima Oro</a>
+  <a href="chi-siamo.html">Chi Siamo</a>
+  <a href="come-funziona.html">Come Funziona</a>
+  <a href="faq.html">FAQ</a>
+  <a href="contatti.html">Contatti</a>
+</nav>
 <!DOCTYPE html>
 <html lang="it">
 <head>
