--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<nav>
-  <a href="index.html">Home</a>
-  <a href="stima.html">Stima Oro</a>
-  <a href="chi-siamo.html">Chi Siamo</a>
-  <a href="come-funziona.html">Come Funziona</a>
-  <a href="faq.html">FAQ</a>
-  <a href="contatti.html">Contatti</a>
-</nav>
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -14,38 +6,72 @@
   <title>Compro Oro Frascati</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * { box-sizing: border-box; }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+
     body {
       font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0;
       background-color: #f4f4f4;
       color: #333;
+      line-height: 1.6;
     }
+
     header {
       background-color: #111;
       color: gold;
-      padding: 1rem 0;
+      padding: 2rem 1rem;
       text-align: center;
     }
+
     nav {
       background: #222;
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
-      gap: 2rem;
+      gap: 1.5rem;
       padding: 1rem;
       position: sticky;
       top: 0;
       z-index: 999;
     }
+
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
+      padding: 0.5rem;
+      transition: color 0.3s, transform 0.2s;
     }
+
     nav a:hover {
       color: gold;
+      transform: scale(1.05);
     }
+
+    .hero {
+      background: url('https://images.unsplash.com/photo-1615393109582-b2f4c6a7cdcd?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
+      padding: 4rem 2rem;
+      text-align: center;
+      color: white;
+    }
+
+    .hero h2 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      text-shadow: 1px 1px 5px black;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 700px;
+      margin: 0 auto;
+      text-shadow: 1px 1px 3px black;
+    }
+
+    main {
+      padding: 2rem;
+      text-align: center;
+    }
+
     footer {
       background: #111;
       color: white;
@@ -53,9 +79,21 @@
       padding: 1rem;
       margin-top: 3rem;
     }
+
+    @media (max-width: 600px) {
+      .hero h2 {
+        font-size: 1.8rem;
+      }
+
+      nav {
+        flex-direction: column;
+        gap: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Compro Oro Frascati</h1>
     <p>Valutazioni Immediate, Pagamenti Immediati</p>
@@ -70,15 +108,21 @@
     <a href="contatti.html">Contatti</a>
   </nav>
 
+  <section class="hero">
+    <h2>Benvenuto su Compro Oro Frascati</h2>
+    <p>Scopri come vendere il tuo oro in modo sicuro, veloce e vantaggioso. Ti guidiamo passo dopo passo.</p>
+  </section>
+
   <main>
-    <section style="padding: 2rem; text-align: center;">
-      <h2>Benvenuto sul nostro sito</h2>
-      <p>Scopri come vendere il tuo oro in modo sicuro, veloce e vantaggioso. Naviga tra le pagine per una panoramica completa.</p>
+    <section>
+      <h3>Perché scegliere noi?</h3>
+      <p>Pagamenti immediati, trasparenza totale e stime in tempo reale. Siamo il tuo punto di riferimento a Frascati per la vendita dell’oro.</p>
     </section>
   </main>
 
   <footer>
     &copy; 2025 Compro Oro Frascati - Tutti i diritti riservati
   </footer>
+
 </body>
 </html>
