--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Compro Oro Frascati</title>
-  <!-- Font e icone -->
+  <!-- Google Fonts e FontAwesome -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/yourkit.js" crossorigin="anonymous"></script>
   <style>
     :root {
-      --gold: #d4af37;
-      --dark: #111;
-      --dark-2: #222;
-      --light: #f4f4f4;
-      --text: #333;
+      --primary: #bfa063;    /* oro più morbido */
+      --dark: #1a1a1a;       /* quasi nero */
+      --dark-2: #2a2a2a;     /* sfondo navbar */
+      --light: #fafafa;      /* sfondo generale */
+      --text: #333333;       /* testo principale */
       --transition: 0.3s;
+      --radius: 8px;
+      --shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
@@ -26,13 +28,12 @@
     }
     header {
       background: var(--dark);
-      color: var(--gold);
+      color: var(--primary);
       text-align: center;
       padding: 2rem 1rem;
-      position: relative;
     }
-    .logo {
-      font-size: 2rem;
+    header .logo {
+      font-size: 2.25rem;
       font-weight: 700;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
     }
@@ -52,10 +53,11 @@
       gap: 1.5rem;
     }
     nav a {
-      color: white;
+      color: #ffffff;
       text-decoration: none;
       font-weight: 600;
       position: relative;
+      padding: 0.25rem 0;
       transition: color var(--transition);
     }
     nav a::after {
@@ -63,11 +65,11 @@
       position: absolute;
       left: 0; bottom: -4px;
       width: 0; height: 2px;
-      background: var(--gold);
+      background: var(--primary);
       transition: width var(--transition);
     }
     nav a:hover {
-      color: var(--gold);
+      color: var(--primary);
     }
     nav a:hover::after {
       width: 100%;
@@ -83,14 +85,14 @@
       background: url('https://images.unsplash.com/photo-1615393109582-b2f4c6a7cdcd?auto=format&fit=crop&w=1400&q=80') center/cover fixed no-repeat;
       padding: 6rem 2rem;
       text-align: center;
-      color: white;
+      color: #ffffff;
       position: relative;
     }
     .hero::before {
       content: '';
       position: absolute;
       inset: 0;
-      background: rgba(0,0,0,0.5);
+      background: rgba(0,0,0,0.6);
     }
     .hero-content {
       position: relative;
@@ -101,24 +103,27 @@
     .hero h1 {
       font-size: 3rem;
       margin-bottom: 1rem;
+      letter-spacing: 1px;
     }
     .hero p {
       font-size: 1.25rem;
       margin-bottom: 2rem;
     }
     .hero .btn {
-      background: var(--gold);
+      background: var(--primary);
       color: var(--dark);
       padding: 0.75rem 2rem;
       font-weight: 700;
       border: none;
-      border-radius: 4px;
+      border-radius: var(--radius);
       cursor: pointer;
-      transition: transform var(--transition);
+      transition: transform var(--transition), box-shadow var(--transition);
       text-decoration: none;
+      display: inline-block;
     }
     .hero .btn:hover {
-      transform: scale(1.05);
+      transform: translateY(-3px);
+      box-shadow: var(--shadow);
     }
     /* SEZIONI */
     .section {
@@ -136,18 +141,19 @@
       gap: 2rem;
     }
     .feature-card {
-      background: white;
+      background: #ffffff;
       padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform var(--transition);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      transition: transform var(--transition), box-shadow var(--transition);
     }
     .feature-card:hover {
       transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
     }
     .feature-card i {
-      font-size: 2rem;
-      color: var(--gold);
+      font-size: 2.25rem;
+      color: var(--primary);
       margin-bottom: 1rem;
     }
     /* TESTIMONIALS */
@@ -157,36 +163,42 @@
     .testimonial {
       max-width: 600px;
       margin: 0 auto 2rem;
+      padding: 1rem;
       font-style: italic;
       position: relative;
+      border-left: 4px solid var(--primary);
+      background: #ffffff;
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
     }
     .testimonial::before {
       content: '“';
       font-size: 3rem;
       position: absolute;
       top: -10px; left: -10px;
-      color: var(--gold);
+      color: var(--primary);
     }
     /* FOOTER */
     footer {
-      background: var(--dark);
-      color: white;
+      background: var(--dark-2);
+      color: #ffffff;
       text-align: center;
       padding: 2rem 1rem;
     }
     .socials a {
-      color: white;
+      color: #ffffff;
       margin: 0 0.5rem;
       font-size: 1.25rem;
       transition: color var(--transition);
     }
     .socials a:hover {
-      color: var(--gold);
+      color: var(--primary);
     }
     @media(max-width:768px){
       .hamburger { display: block; }
       nav .menu { display: none; flex-direction: column; gap:1rem; background: var(--dark-2); position: absolute; top:100%; left:0; width:100%; padding:1rem 2rem; }
       nav .menu.open { display: flex; }
+      .hero h1 { font-size: 2.5rem; }
     }
   </style>
 </head>
