--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <body>
 
   <header>
-    <div class="logo">Compro Oro Frascati</div>
+    <div class="logo">Oro Rapido Frascati</div>
     <p>Valutazioni Immediate, Pagamenti Immediati</p>
   </header>
 
@@ -198,7 +198,7 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>Benvenuto su Compro Oro Frascati</h1>
+      <h1>Benvenuto su Oro Rapido Frascati</h1>
       <p>Scopri come vendere il tuo oro in modo sicuro, veloce e vantaggioso. Ti guidiamo passo dopo passo.</p>
       <a href="stima.html" class="btn">Calcola la tua stima</a>
     </div>
