--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
     /* HERO PARALLAX */
     .hero {
-      background: url('https://images.unsplash.com/photo-1566541240942-8f5f8161b8b2?auto=format&fit=crop&w=1400&q=80') center/cover fixed no-repeat;
+      background: url('https://unsplash.com/it/foto/cassa-rettangolare-in-oro-e-nero-Y9U4XZYbSQ4') center/cover fixed no-repeat;
       padding: 7rem 2rem;
       text-align: center;
       color: var(--light);
