--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <script src="https://kit.fontawesome.com/yourkit.js" crossorigin="anonymous"></script>
   <style>
     :root {
-      --primary: #FFD700;     /* oro brillante */
-      --dark: #000000;        /* nero puro */
-      --dark-2: #333333;      /* grigio scuro */
-      --light: #FFFFFF;       /* bianco brillante */
-      --text: #222222;        /* testo principale scuro */
+      --primary: #FFD700;
+      --dark: #000000;
+      --dark-2: #333333;
+      --light: #FFFFFF;
+      --text: #222222;
       --transition: 0.3s;
       --radius: 10px;
       --shadow: 0 6px 20px rgba(0,0,0,0.15);
@@ -65,22 +65,19 @@
       background: var(--primary);
       transition: width var(--transition);
     }
-    nav a:hover {
-      color: var(--primary);
-    }
-    nav a:hover::after {
-      width: 100%;
-    }
-    .hamburger {
-      display: none;
-      font-size: 1.75rem;
-      color: var(--light);
-      cursor: pointer;
-    }
+    nav a:hover { color: var(--primary); }
+    nav a:hover::after { width: 100%; }
+    .hamburger { display: none; font-size: 1.75rem; color: var(--light); cursor: pointer; }
+
     /* HERO PARALLAX */
     .hero {
-      background: url('https://unsplash.com/it/foto/cassa-rettangolare-in-oro-e-nero-Y9U4XZYbSQ4') center/cover fixed no-repeat;
-      padding: 7rem 2rem;
+      background: url('https://images.unsplash.com/photo-1573636367218-212cc4868199?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
+      background-attachment: scroll;
+      min-height: 80vh;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
       color: var(--light);
       position: relative;
@@ -95,17 +92,14 @@
       position: relative;
       z-index: 1;
       max-width: 800px;
-      margin: 0 auto;
+      margin: 0 1rem;
     }
     .hero h1 {
       font-size: 3.5rem;
       margin-bottom: 1rem;
       letter-spacing: 3px;
     }
-    .hero p {
-      font-size: 1.5rem;
-      margin-bottom: 2rem;
-    }
+    .hero p { font-size: 1.5rem; margin-bottom: 2rem; }
     .hero .btn {
       background: var(--primary);
       color: var(--dark);
@@ -123,7 +117,8 @@
       transform: translateY(-4px);
       box-shadow: var(--shadow);
     }
-    /* SEZIONI */
+
+    /* SECTIONS */
     .section { padding: 4rem 2rem; text-align: center; }
     .section h2 {
       margin-bottom: 2rem;
@@ -158,6 +153,7 @@
       font-size: 1.25rem;
       font-weight: 600;
     }
+
     /* TESTIMONIALS */
     .testimonials { background: var(--light); }
     .testimonial {
@@ -178,6 +174,7 @@
       top: -15px; left: -15px;
       color: var(--primary);
     }
+
     /* FOOTER */
     footer {
       background: var(--dark-2);
@@ -192,6 +189,7 @@
       transition: color var(--transition);
     }
     .socials a:hover { color: var(--primary); }
+
     @media(max-width:768px){
       .hamburger { display: block; }
       nav .menu { display: none; flex-direction: column; gap:1rem; background: var(--dark-2); position: absolute; top:100%; left:0; width:100%; padding:1rem 2rem; }
