--- a/stima.html
+++ b/stima.html
@@ -1,87 +1,148 @@
-<nav>
-  <a href="index.html">Home</a>
-  <a href="stima.html">Stima Oro</a>
-  <a href="chi-siamo.html">Chi Siamo</a>
-  <a href="come-funziona.html">Come Funziona</a>
-  <a href="faq.html">FAQ</a>
-  <a href="contatti.html">Contatti</a>
-</nav>
 <!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Stima Oro - Compro Oro Frascati</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts e FontAwesome -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/yourkit.js" crossorigin="anonymous"></script>
   <style>
+    :root {
+      --primary: #FFD700;
+      --dark: #000;
+      --dark-2: #333;
+      --light: #fff;
+      --bg: #f4f4f4;
+      --text: #222;
+      --radius: 8px;
+      --shadow: 0 4px 12px rgba(0,0,0,0.1);
+      --transition: 0.3s;
+    }
+    *, *::before, *::after { box-sizing: border-box; margin:0; padding:0; }
     body {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
+      font-family: 'Poppins', 'Montserrat', sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      scroll-behavior: smooth;
     }
-    header, footer {
-      background-color: #111;
-      color: gold;
+    header {
+      background: var(--dark);
+      color: var(--primary);
       text-align: center;
-      padding: 1rem 0;
+      padding: 2rem 1rem;
     }
+    header h1 { font-size: 2.5rem; letter-spacing: 2px; }
+    header p { font-size: 1rem; margin-top: 0.5rem; }
     nav {
-      background: #222;
+      background: var(--dark-2);
       display: flex;
       justify-content: center;
-      gap: 2rem;
+      gap: 1.5rem;
       padding: 1rem;
       position: sticky;
       top: 0;
-      z-index: 999;
+      z-index: 1000;
     }
     nav a {
-      color: white;
+      color: var(--light);
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 600;
+      position: relative;
+      transition: color var(--transition);
     }
-    nav a:hover {
-      color: gold;
+    nav a::after {
+      content: '';
+      position: absolute;
+      left: 0; bottom: -4px;
+      width: 0; height: 2px;
+      background: var(--primary);
+      transition: width var(--transition);
     }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 2rem;
-    }
-    h2 {
-      color: #333;
+    nav a:hover { color: var(--primary); }
+    nav a:hover::after { width:100%; }
+    .hero {
+      background: url('https://images.unsplash.com/photo-1584440856154-01862db26141?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
+      padding: 6rem 2rem;
       text-align: center;
+      color: var(--light);
+      position: relative;
     }
-    form {
-      background: white;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    .hero::before {
+      content:'';
+      position:absolute; inset:0;
+      background:rgba(0,0,0,0.5);
     }
-    label, input, select {
-      display: block;
-      width: 100%;
+    .hero-content {
+      position:relative; z-index:1; max-width:700px; margin:0 auto;
+    }
+    .hero-content h2 {
+      font-size: 2.75rem;
       margin-bottom: 1rem;
+      letter-spacing:2px;
     }
-    input, select {
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+    .hero-content p {
+      font-size:1.2rem;
+      margin-bottom:2rem;
     }
-    button {
-      background-color: gold;
-      border: none;
-      padding: 0.75rem 2rem;
-      color: black;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
+    main { padding: 3rem 1rem; display:flex; justify-content:center; }
+    .form-card {
+      background: var(--light);
+      padding: 2.5rem;
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      max-width: 500px;
+      width:100%;
+    }
+    .form-card label {
+      display:block;
+      margin-bottom:0.5rem;
+      font-weight:500;
+    }
+    .form-card select,
+    .form-card input {
+      width:100%; padding:0.75rem; margin-bottom:1.5rem;
+      border:1px solid #ccc; border-radius:4px;
+      font-family: inherit;
+      transition: border-color var(--transition);
+    }
+    .form-card select:focus,
+    .form-card input:focus {
+      outline:none;
+      border-color: var(--primary);
+    }
+    .form-card button {
+      display:block;
+      width:100%; padding:1rem;
+      background: var(--primary);
+      color: var(--dark);
+      font-size:1rem;
+      font-weight:700;
+      border:none;
+      border-radius: var(--radius);
+      cursor:pointer;
+      transition: background var(--transition), transform var(--transition);
+    }
+    .form-card button:hover {
+      background: #e6c200;
+      transform: translateY(-2px);
     }
     .result {
-      margin-top: 1rem;
-      font-weight: bold;
-      text-align: center;
+      margin-top:1.5rem;
+      font-size:1.25rem;
+      text-align:center;
+      font-weight:700;
+    }
+    footer {
+      background: var(--dark);
+      color: var(--light);
+      text-align:center;
+      padding:1.5rem 1rem;
+      margin-top:3rem;
+    }
+    @media(max-width:600px) {
+      .hero-content h2 { font-size:2.25rem; }
+      .form-card { padding:2rem; }
     }
   </style>
 </head>
@@ -100,53 +161,50 @@
     <a href="contatti.html">Contatti</a>
   </nav>
 
-  <div class="container">
-    <h2>Calcola la Stima del Tuo Oro</h2>
-    <form id="stima-form">
-      <label for="carati">Seleziona i carati:</label>
-      <select id="carati" required>
-        <option value="">-- scegli --</option>
-        <option value="24">24K (oro puro)</option>
-        <option value="22">22K</option>
-        <option value="18">18K</option>
-        <option value="14">14K</option>
-      </select>
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Calcola la Stima del Tuo Oro</h2>
+      <p>Inserisci i dati per ottenere un valore stimato in pochi secondi.</p>
+    </div>
+  </section>
 
-      <label for="peso">Inserisci il peso in grammi:</label>
-      <input type="number" id="peso" step="0.01" min="0" required>
+  <main>
+    <div class="form-card">
+      <form id="stima-form">
+        <label for="carati">Seleziona i carati</label>
+        <select id="carati" required>
+          <option value="">-- scegli --</option>
+          <option value="24">24K (oro puro)</option>
+          <option value="22">22K</option>
+          <option value="18">18K</option>
+          <option value="14">14K</option>
+        </select>
 
-      <button type="submit">Calcola Stima</button>
-    </form>
+        <label for="peso">Inserisci il peso (grammi)</label>
+        <input type="number" id="peso" step="0.01" min="0" placeholder="es. 10.50" required>
 
-    <div class="result" id="risultato"></div>
-  </div>
+        <button type="submit">Calcola Stima</button>
+        <div class="result" id="risultato"></div>
+      </form>
+    </div>
+  </main>
 
-  <footer>
-    &copy; 2025 Compro Oro Frascati - Tutti i diritti riservati
-  </footer>
+  <footer>&copy; 2025 Compro Oro Frascati</footer>
 
   <script>
-    const prezziOro = {
-      24: 60,
-      22: 55,
-      18: 45,
-      14: 35
-    };
-
-    document.getElementById('stima-form').addEventListener('submit', function(e) {
+    const prezziOro = { 24:60,22:55,18:45,14:35 };
+    document.getElementById('stima-form').addEventListener('submit', e => {
       e.preventDefault();
       const carati = document.getElementById('carati').value;
       const peso = parseFloat(document.getElementById('peso').value);
-
-      if (carati && peso) {
-        const prezzo = prezziOro[carati];
-        const totale = (prezzo * peso).toFixed(2);
-        document.getElementById('risultato').innerText = `Valore stimato: €${totale}`;
+      const out = document.getElementById('risultato');
+      if(carati && peso>0) {
+        const totale = (prezziOro[carati]*peso).toFixed(2);
+        out.innerText = `Valore stimato: €${totale}`;
       } else {
-        document.getElementById('risultato').innerText = 'Inserisci tutti i dati.';
+        out.innerText = 'Per favore compila tutti i campi.';
       }
     });
   </script>
 </body>
 </html>
-
