--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Stima Oro - Compro Oro Frascati</title>
+  <title>Chi Siamo - Compro Oro Frascati</title>
   <!-- Google Fonts e FontAwesome -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/yourkit.js" crossorigin="anonymous"></script>
@@ -32,216 +32,114 @@
       text-align: center;
       padding:2rem 1rem;
     }
-    header h1 {
-      font-size:2.5rem;
-      letter-spacing:2px;
-      margin-bottom:0.5rem;
-    }
-    header p {
-      font-size:1rem;
-    }
+    header h1 { font-size:2.5rem; letter-spacing:2px; margin-bottom:0.5rem; }
+    header p { font-size:1rem; }
     nav {
       background: var(--dark-gray);
-      display:flex;
-      justify-content:center;
-      gap:1.5rem;
-      padding:1rem;
-      position:sticky;
-      top:0;
-      z-index:1000;
+      display:flex; justify-content:center; gap:1.5rem;
+      padding:1rem; position:sticky; top:0; z-index:1000;
     }
     nav a {
-      color: var(--white);
-      text-decoration:none;
-      font-weight:600;
-      position:relative;
-      padding:0.25rem;
+      color: var(--white); text-decoration:none; font-weight:600;
+      position:relative; padding:0.25rem;
       transition: color var(--transition);
     }
     nav a::after {
-      content:'';
-      position:absolute;
-      left:0; bottom:-4px;
-      width:0; height:2px;
-      background: var(--gold);
+      content:''; position:absolute; left:0; bottom:-4px;
+      width:0; height:2px; background: var(--gold);
       transition: width var(--transition);
     }
-    nav a:hover {
-      color: var(--gold);
-    }
-    nav a:hover::after {
-      width:100%;
-    }
+    nav a:hover { color: var(--gold); }
+    nav a:hover::after { width:100%; }
     .hero {
-      background: url('https://images.unsplash.com/photo-1584440856154-01862db26141?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
-      min-height:60vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      position:relative;
-      color: var(--white);
+      background: url('https://images.unsplash.com/photo-1540555700478-4be289fbecef?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
+      min-height:50vh; display:flex; align-items:center; justify-content:center;
+      text-align:center; position:relative; color: var(--white);
     }
     .hero::before {
-      content:'';
-      position:absolute;
-      inset:0;
-      background: rgba(0,0,0,0.5);
+      content:''; position:absolute; inset:0; background: rgba(0,0,0,0.5);
     }
-    .hero-content {
-      position:relative;
-      z-index:1;
-      max-width:700px;
-      margin:0 1rem;
+    .hero-content { position:relative; z-index:1; max-width:700px; margin:0 1rem; }
+    .hero-content h2 { font-size:2.5rem; margin-bottom:1rem; letter-spacing:2px; }
+    .hero-content p { font-size:1.2rem; }
+    .section { padding:4rem 1rem; text-align:center; }
+    .section h3 { font-size:2rem; margin-bottom:1rem; color:var(--black); }
+    .features {
+      display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px,1fr));
+      gap:2rem;
+      margin-top:2rem;
     }
-    .hero-content h2 {
-      font-size:2.75rem;
-      margin-bottom:1rem;
-      letter-spacing:2px;
-    }
-    .hero-content p {
-      font-size:1.25rem;
-      margin-bottom:2rem;
-    }
-    .hero-content .btn {
-      background: var(--gold);
-      color: var(--black);
-      padding:0.75rem 2rem;
-      font-weight:700;
-      border:none;
-      border-radius:var(--radius);
-      cursor:pointer;
+    .feature-card {
+      background: var(--white); padding:2rem;
+      border-radius:var(--radius); box-shadow:var(--shadow);
       transition: transform var(--transition), box-shadow var(--transition);
-      text-decoration:none;
     }
-    .hero-content .btn:hover {
-      transform: translateY(-3px);
-      box-shadow: var(--shadow);
+    .feature-card:hover {
+      transform: translateY(-5px); box-shadow:0 10px 25px rgba(0,0,0,0.2);
     }
-    main {
-      padding:3rem 1rem;
-      display:flex;
-      justify-content:center;
+    .feature-card i {
+      font-size:2rem; color:var(--gold); margin-bottom:1rem;
     }
-    .form-card {
-      background: var(--white);
-      padding:2.5rem;
-      border-radius:var(--radius);
-      box-shadow: var(--shadow);
-      max-width:500px;
-      width:100%;
-    }
-    .form-card label {
-      display:block;
-      margin-bottom:0.5rem;
-      font-weight:500;
-    }
-    .form-card select,
-    .form-card input {
-      width:100%;
-      padding:0.75rem;
-      margin-bottom:1.5rem;
-      border:1px solid #ccc;
-      border-radius:4px;
-      font-family:inherit;
-      transition: border-color var(--transition);
-    }
-    .form-card select:focus,
-    .form-card input:focus {
-      outline:none;
-      border-color: var(--gold);
-    }
-    .form-card button {
-      width:100%;
-      padding:1rem;
-      background: var(--gold);
-      color: var(--black);
-      font-size:1rem;
-      font-weight:700;
-      border:none;
-      border-radius:var(--radius);
-      cursor:pointer;
-      transition: background var(--transition), transform var(--transition);
-    }
-    .form-card button:hover {
-      background: #e6c200;
-      transform: translateY(-2px);
-    }
-    .result {
-      margin-top:1.5rem;
-      font-size:1.25rem;
-      text-align:center;
-      font-weight:700;
-    }
+    .feature-card h4 { margin-bottom:0.5rem; font-size:1.25rem; font-weight:600; }
+    .feature-card p { font-size:1rem; }
     footer {
-      background: var(--black);
-      color: var(--white);
-      text-align:center;
-      padding:1.5rem 1rem;
-      margin-top:3rem;
+      background: var(--black); color:var(--white);
+      text-align:center; padding:1.5rem 1rem; margin-top:3rem;
     }
     @media(max-width:600px) {
-      .hero-content h2 { font-size:2.25rem; }
-      .form-card { padding:2rem; }
+      .hero-content h2 { font-size:2rem; }
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Compro Oro Frascati</h1>
-    <p>Stima il tuo oro in pochi secondi</p>
+    <h1>Chi Siamo</h1>
+    <p>Compro Oro Frascati - Il nostro servizio mobile di acquisto oro</p>
   </header>
-
   <nav>
     <a href="index.html">Home</a>
     <a href="stima.html">Stima Oro</a>
-    <a href="chi-siamo.html">Chi Siamo</a>
+    <a href="chi-siamo.html" class="active">Chi Siamo</a>
     <a href="come-funziona.html">Come Funziona</a>
     <a href="faq.html">FAQ</a>
     <a href="contatti.html">Contatti</a>
   </nav>
-
   <section class="hero">
     <div class="hero-content">
-      <h2>Calcola la Stima del Tuo Oro</h2>
-      <p>Ottieni un valore stimato in pochi secondi inserendo carati e peso.</p>
-      <a href="#stima-form" class="btn">Inizia Ora</a>
+      <h2>Siamo dove sei tu</h2>
+      <p>Un compro oro senza sede fissa: su appuntamento veniamo direttamente da te, ovunque ti trovi.</p>
     </div>
   </section>
-
-  <main>
-    <div class="form-card">
-      <form id="stima-form">
-        <label for="carati">Seleziona i carati</label>
-        <select id="carati" required>
-          <option value="">-- scegli --</option>
-          <option value="24">24K (oro puro)</option>
-          <option value="22">22K</option>
-          <option value="18">18K</option>
-          <option value="14">14K</option>
-        </select>
-
-        <label for="peso">Inserisci il peso (g)</label>
-        <input type="number" id="peso" step="0.01" min="0" placeholder="es. 10.50" required>
-
-        <button type="submit">Calcola Stima</button>
-        <div class="result" id="risultato"></div>
-      </form>
+  <section class="section">
+    <h3>La nostra missione</h3>
+    <p>Offrire un servizio di acquisto oro sicuro, professionale e comodo: niente spostamenti, nessuna attesa in coda.</p>
+  </section>
+  <section class="section">
+    <h3>Come funzioniamo</h3>
+    <div class="features">
+      <div class="feature-card">
+        <i class="fas fa-calendar-alt"></i>
+        <h4>Appuntamento Online</h4>
+        <p>Programma il ritiro dell’oro con pochi click, scegliendo giorno e fasce orarie.</p>
+      </div>
+      <div class="feature-card">
+        <i class="fas fa-truck"></i>
+        <h4>Servizio Mobile</h4>
+        <p>Il nostro team raggiunge la tua abitazione o ufficio con kit professionale.</p>
+      </div>
+      <div class="feature-card">
+        <i class="fas fa-lock"></i>
+        <h4>Sicurezza Totale</h4>
+        <p>Valutazione trasparente e pagamenti immediati con documentazione ufficiale.</p>
+      </div>
+      <div class="feature-card">
+        <i class="fas fa-tools"></i>
+        <h4>Equipaggiamento Professionale</h4>
+        <p>Bilance di precisione, kit di prova, e strumenti certificati per una stima accurata.</p>
+      </div>
     </div>
-  </main>
-
-  <footer>&copy; 2025 Compro Oro Frascati</footer>
-
-  <script>
-    const prezziOro = { 24:60,22:55,18:45,14:35 };
-    document.getElementById('stima-form').addEventListener('submit',e=>{
-      e.preventDefault();
-      const carati=document.getElementById('carati').value;
-      const peso=parseFloat(document.getElementById('peso').value);
-      const out=document.getElementById('risultato');
-      if(carati && peso>0){ out.innerText=`Valore stimato: €${(prezziOro[carati]*peso).toFixed(2)}`; }
-      else { out.innerText='Per favore compila tutti i campi.'; }
-    });
-  </script>
+  </section>
+  <footer>&copy; 2025 Compro Oro Frascati - Tutti i diritti riservati</footer>
 </body>
 </html>
